--- a/app/src/main/res/layout/activity_sroll_tab.xml
+++ b/app/src/main/res/layout/activity_sroll_tab.xml
@@ -36,7 +36,7 @@
             app:tabTextAppearance="@style/TabLayoutTextStyle2"
             app:tabTextColor="@color/c_ffffff" />
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp_news"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
